--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0-alpha04'
 
     // Dagger Hilt
-    def hilt_version = "2.38.1"
+    def hilt_version = "2.42"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
@@ -87,5 +87,13 @@ dependencies {
     def glide_version = "4.13.0"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    // RazorPay
+    def razorpay_version = "1.6.19"
+    implementation "com.razorpay:checkout:${razorpay_version}"
+
+    // Lottie Animation
+    def lottieVersion = "3.7.1"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
 }
